# value-trait

./: .drone.yml  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: quality.yaml  test.yaml  tests.yml
src/: array.rs  base.rs  derived.rs  generator.rs  impls.rs  lib.rs  node.rs  object.rs  option.rs  prelude.rs
src/impls/: serde_json.rs
src/node/: cmp.rs  from.rs
