[package]
name = "value-trait"
version = "0.6.1"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
edition = "2021"
license = "Apache-2.0/MIT"
description = "Traits to deal with JSONesque values"
repository = "https://github.com/simd-lite/value-trait"
readme = "README.md"
documentation = "https://docs.rs/value-trait"
rust-version = "1.61"


[dependencies]
itoa = "1"
ryu = "1"
halfbrown = { version = "0.2", optional = true }
float-cmp = "0.9"
hashbrown = { version = "0.14", optional = true }
abi_stable = { version = "0.11.0", optional = true, default-features = false }

[features]
default = ["custom-types", "halfbrown"]
# Support for 128 bit integers
128bit = []

# Support for custom types
custom-types = []

# Support for abi-stable's `StableAbi` implementation
c-abi = ["abi_stable"]

# Allow fallback to non simd CPUs
allow-non-simd = []
